Fixed border rounding

--- a/seek.ini
+++ b/seek.ini
@@ -1,8 +1,8 @@
 [Rainmeter]
 Update=100
-BackgroundMode=2
-SolidColor=#SkinBackgroundColour#
 SkinWidth=#SkinWidth#
+BackgroundMode=2
+SolidColor=0,0,0,1
 
 @IncludeVariables=#@#variables.inc
 
@@ -68,6 +68,13 @@ DynamicVariables=1
 InlineSetting=Face | #LegendFont#
 InlineSetting2=Size | #LegendSize#
 InlineSetting3=Color | #LegendColour#
+
+;-- Background
+
+[Background]
+Meter=Shape
+Shape=Rectangle 0,0,#CURRENTCONFIGWIDTH#,#CURRENTCONFIGHEIGHT#,(#BarWidth#*#BorderRound#) | StrokeWidth 0 | Fill Color #SkinBackgroundColour#
+DynamicVariables=1
 
 ;--- Legends 
 
@@ -191,11 +198,11 @@ UpdateDivider=-1
 
 [SkinBorder]
 Meter=Shape
-Shape=Rectangle 0,0,#CURRENTCONFIGWIDTH#,#CURRENTCONFIGHEIGHT#,(#BarWidth#*0.5*#BorderRound#) | StrokeWidth 0 | Fill Color #BorderColour#
+Shape=Rectangle 0,0,#CURRENTCONFIGWIDTH#,#CURRENTCONFIGHEIGHT#,(#BarWidth#*#BorderRound#) | StrokeWidth 0 | Fill Color #BorderColour#
 Shape2=Rectangle #BarWidth#,#BarWidth#,(#CURRENTCONFIGWIDTH#-#BarWidth#*2),(#CURRENTCONFIGHEIGHT#-#BarWidth#*2)
 Shape3=Combine Shape | XOR Shape2
-Shape4=Rectangle 0,0,40,#CURRENTCONFIGHEIGHT# | StrokeWidth 0 | Fill LinearGradient Left
+Shape4=Rectangle 0,0,40,#CURRENTCONFIGHEIGHT#,(#BarWidth#*#BorderRound#) | StrokeWidth 0 | Fill LinearGradient Left
 Left=0 | #GradientColour#,0 ; 0.0 | #GradientColour#,(255*#Gradient#) ; 1.0
-Shape5=Rectangle (#CURRENTCONFIGWIDTH#-40),0,40,#CURRENTCONFIGHEIGHT# | StrokeWidth 0 | Fill LinearGradient Right
+Shape5=Rectangle (#CURRENTCONFIGWIDTH#-40),0,40,#CURRENTCONFIGHEIGHT#,(#BarWidth#*#BorderRound#) | StrokeWidth 0 | Fill LinearGradient Right
 Right=180 | #GradientColour#,0 ; 0.0 | #GradientColour#,(255*#Gradient#) ; 1.0
 DynamicVariables=1
